--- a/Computational_BCI_using_Python_MNE_Library_1st_iteration.ipynb
+++ b/Computational_BCI_using_Python_MNE_Library_1st_iteration.ipynb
@@ -50,7 +50,7 @@
         "outputId": "9ae6190f-1dfb-472d-e0ff-c095cad854e4",
         "cellView": "form"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -111,7 +111,7 @@
         "id": "vtRaryCWLdDd",
         "outputId": "7cd17a56-c311-473d-a3a4-1f7ef65a3155"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -124,7 +124,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "KXBBdX-Mot9N",
         "cellView": "form"
@@ -163,13 +163,13 @@
         "id": "QWUujYPKrCrP",
         "cellView": "form"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "Initialize parameters including EEG related Metadata.\n",
+        "Initialize parameters including EEG related Metadata:-\n",
         "\n",
         "\n",
         "*   **eeg_sample_count**:  Number of samples being trained in the current network\n",
@@ -200,7 +200,7 @@
       "metadata": {
         "id": "PZgYCnwDrime"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -228,7 +228,7 @@
         "outputId": "b14f5d75-a396-4180-a01b-14a4b21362df",
         "cellView": "form"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -304,7 +304,7 @@
         },
         "outputId": "8808d6b1-a9f2-42af-ccd0-e19706fa76b9"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -433,7 +433,7 @@
         },
         "outputId": "4eb17438-a901-48f1-9ed1-493487f3a235"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -467,7 +467,7 @@
         "id": "mOVjPj_jj_fC",
         "outputId": "c34f427b-6b1d-403f-fa00-9e5e6a273ccf"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -507,7 +507,7 @@
         },
         "outputId": "d4d5017d-daba-4e73-984c-588bcf0ea857"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -538,7 +538,7 @@
         },
         "outputId": "e3c8412c-4a2c-47be-f2cd-6ee52b02a987"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -601,7 +601,7 @@
         },
         "outputId": "f189b56f-f793-4f83-b9df-943e705883bc"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -640,7 +640,7 @@
         },
         "outputId": "c399ff2d-1c6b-4622-956b-631ca2241010"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -691,7 +691,7 @@
         },
         "outputId": "cb2470fc-9a1e-4e31-9755-e8c9cb8c458b"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -796,7 +796,7 @@
         "id": "90eN20qikkO_",
         "outputId": "c64550a9-8865-4e85-d971-6d2be16133bf"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -822,7 +822,7 @@
         "id": "3SdV6I5aVl3M",
         "outputId": "a4d3a511-529a-42db-f1bf-d653e95dcc4d"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -860,7 +860,7 @@
         "id": "lU0KONqdXemd",
         "outputId": "46805c6b-5761-4396-a9ab-1fef859560be"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -886,7 +886,7 @@
         "id": "jyJq5zeiV3YS",
         "outputId": "e6751427-315f-4411-f7d8-9e7e72b0f82f"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -924,7 +924,7 @@
         "id": "CiyoAQBMWTCA",
         "outputId": "606a382a-873a-41c8-8c12-8345f769c8d2"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -987,7 +987,7 @@
       "metadata": {
         "id": "SRWsgEafSBCs"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1014,7 +1014,7 @@
         },
         "outputId": "3b9fccbd-57af-4aa7-ccf0-f35dcc68b6f7"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1085,7 +1085,7 @@
         "id": "n50yNTzJkrWX",
         "outputId": "4274748a-d135-4ac4-e040-d06a26077806"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1139,7 +1139,7 @@
         "id": "EbBXzmyhlgZn",
         "outputId": "3c5efce2-2c24-4975-84c5-02efeaff9e59"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1189,7 +1189,7 @@
         },
         "outputId": "3744097c-ecd1-41ee-dc56-48ae09a1f8a5"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1255,7 +1255,7 @@
       "metadata": {
         "id": "NjMEfH7yNMG1"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1263,7 +1263,7 @@
       "source": [
         "import sklearn\n",
         "from sklearn.preprocessing import MinMaxScaler\n",
-        "P300_file_3 = sio.loadmat('/content/drive/MyDrive/BCI & Computational Neuroscience/BCI UTS Australia Workshop/P300Data3.mat')\n",
+        "P300_file_3 = sio.loadmat('/content/drive/MyDrive/Datasets/EEG Data/ERP P300/P300Data3.mat')\n",
         "#print('P300 file contents',P300_file.keys())\n",
         "P300_data_3 = P300_file_3['Data']\n",
         "\n",
@@ -1293,7 +1293,7 @@
         "id": "YDL6e_cgfrbl",
         "outputId": "d5166790-3aaf-41e1-b461-44ebf698aa49"
       },
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1308,14 +1308,14 @@
     {
       "cell_type": "code",
       "source": [
-        "P300_file_2 = sio.loadmat('/content/drive/MyDrive/BCI & Computational Neuroscience/BCI UTS Australia Workshop/P300Data2.mat')\n",
+        "P300_file_2 = sio.loadmat('/content/drive/MyDrive/Datasets/EEG Data/ERP P300/P300Data2.mat')\n",
         "#print('P300 file contents',P300_file.keys())\n",
         "P300_data_2 = P300_file_2['Data']\n",
         "# select the 5-th channel as the training data\n",
         "P300_data_c5_2 = P300_data_2[6, :, 120:150].transpose()\n",
         "P300_label_2 = P300_file_2['Labels'][120:150]\n",
         "\n",
-        "P300_file_1 = sio.loadmat('/content/drive/MyDrive/BCI & Computational Neuroscience/BCI UTS Australia Workshop/P300Data.mat')\n",
+        "P300_file_1 = sio.loadmat('/content/drive/MyDrive/Datasets/EEG Data/ERP P300/P300Data1.mat')\n",
         "#print('P300 file contents',P300_file.keys())\n",
         "P300_data_1 = P300_file_1['Data']\n",
         "# select the 5-th channel as the training data\n",
@@ -1339,7 +1339,7 @@
         },
         "outputId": "d849d524-802b-4d71-c9e2-9c53185800f3"
       },
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1386,7 +1386,7 @@
         },
         "outputId": "aaa3a806-2849-4164-a5b5-527a608c7efe"
       },
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1425,7 +1425,7 @@
         "id": "InUZzEG2QyCY",
         "outputId": "fcda6b9c-f6e5-41a8-ea75-b8caa27e1244"
       },
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1463,7 +1463,7 @@
         "id": "38DhqyJkSElV",
         "outputId": "95d37b07-57ea-4714-bc6a-1d19a2bbf2b3"
       },
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1509,7 +1509,7 @@
       "source": [
         "import sklearn\n",
         "from sklearn.preprocessing import MinMaxScaler\n",
-        "P300_file_3 = sio.loadmat('/content/drive/MyDrive/BCI & Computational Neuroscience/BCI UTS Australia Workshop/P300Data3.mat')\n",
+        "P300_file_3 = sio.loadmat('/content/drive/MyDrive/Datasets/EEG Data/ERP P300/P300Data3.mat')\n",
         "#print('P300 file contents',P300_file.keys())\n",
         "P300_data_3 = P300_file_3['Data']\n",
         "\n",
@@ -1539,7 +1539,7 @@
         "outputId": "724992f8-c785-434f-9af5-c3bcbb22509f",
         "id": "lc22wrxNhE8L"
       },
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1586,7 +1586,7 @@
         "outputId": "3667db88-7ba4-4284-a79a-6206d8ebef6c",
         "id": "qIM_px_WgBb_"
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1625,7 +1625,7 @@
         "outputId": "36f0246d-3e2f-453d-d1ed-ece1809572f7",
         "id": "CGfQhW6rgKGb"
       },
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1663,7 +1663,7 @@
         "outputId": "15d66af5-1f93-4bfe-dfe6-dba96964a66c",
         "id": "gk0eKym4gOwH"
       },
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
